--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,6 +5,10 @@ server:
       force: true            # 강제로 UTF-8 인코딩을 적용, 클라이언트가 다른 인코딩을 요청하더라도 무시하고 UTF-8을 사용
   port: 8080                 # 서버가 8080 포트에서 실행되도록 설정
 
+  error:
+    whitelabel:
+      enabled: false
+
 spring:
   mustache:
     servlet:
@@ -35,6 +39,9 @@ spring:
   output:
     ansi:
       enabled: always  # 콘솔 출력 시 ANSI 색상을 항상 사용하도록 설정 (색상을 통해 로그를 더 쉽게 구분 가능)
+  devtools:
+    restart:
+      enabled: true
 
 logging:
   level:
